--- a/client/public/stylesheet.css
+++ b/client/public/stylesheet.css
@@ -31,7 +31,7 @@
 .empty,.x,.o {
 	position: relative;
 	background-color: #FA6900;
-    border-radius: 5px;
+  border-radius: 5px;
 	margin: 5px;
 	display: inline-block;
 	height: 100px;
@@ -44,14 +44,23 @@
 .empty:hover{
     box-shadow: inset 0 0 0 5px #f6fa35;
 }
-
-.x:after {
+.x {
+    background-image: url(img/X.png);
+    background-repeat:no-repeat;
+    background-size:100px;
+}
+.o {
+    background-image: url(img/O.png);
+    background-repeat:no-repeat;
+    background-size:100px;
+}
+/*.x:after {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    content: "\2716"; /* X */
+    content: "\2716";
     font-size: 70px;
     color: #FFF;
     line-height: 100px;
@@ -63,10 +72,10 @@
     bottom: 0;
     left: 0;
     right: 0;
-    content: "\039f"; /* O */
+    content: "\039f";
     font-family: "arial";
 	font-size: 70px;
     color: #FFF;
     line-height: 100px;
     text-align: center;
-}
+}*/
